# ai-digital-twin

./: .gitattributes  README.md  app.py  interface.py  main.py  pyproject.toml  requirements.txt  twin.py
